<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    android:background="@drawable/layout_bck">

    <!--<RelativeLayout-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_gravity="center"-->
        <!--android:padding="40dp"-->
        <!--android:background="#A"-->
        <!--android:alpha="0.8"-->
        <!--android:gravity="center_horizontal"-->
        <!--android:layout_centerVertical="true"-->
        <!--android:layout_alignParentLeft="true"-->
        <!--android:layout_alignParentStart="true">-->


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_form"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"/>

        <EditText
            android:id="@+id/loginMail"
            android:layout_width="match_parent"
            android:hint="@string/email"
            android:padding="10dp"
            android:layout_marginTop="150dp"
            android:background="@drawable/my_button"
            android:layout_height="40dp" />
        <EditText
            android:id="@+id/loginPass"
            android:background="@drawable/my_button"
            android:layout_marginTop="30dp"
            android:hint="@string/password"
            android:padding="10dp"
            android:inputType="textPassword"
            android:layout_below="@+id/loginMail"
            android:layout_width="match_parent"
            android:layout_height="40dp" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:background="@drawable/my_button"
            android:layout_marginTop="36dp"
            android:text="@string/login"
            android:layout_below="@+id/loginPass"
            android:layout_centerHorizontal="true" />

        <TextView
            android:id="@+id/forgotPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_pass"
            android:layout_below="@+id/loginButton"
           android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"/>
    <!--</RelativeLayout>-->


</RelativeLayout>