<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reschedule"
            android:layout_centerInParent="true"
            android:textSize="@dimen/re_title_n"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.1"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:text="@string/dateSel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/date_et"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_gravity="center"/>

        <TextView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:id="@+id/date_re"
            android:onClick="onClick"
            android:layout_marginRight="10dp"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginEnd="10dp"
            android:layout_height="match_parent"
            android:background="@drawable/calender_ico"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="horizontal"
        android:layout_weight="1.1">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="20dp"
            android:layout_weight="2"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:layout_marginStart="20dp"
            android:text="@string/timeSel"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:id="@+id/time_set_ev"
            android:layout_gravity="center"/>

        <ImageView
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_marginRight="10dp"
            android:id="@+id/time_re"
            android:layout_marginEnd="10dp"
            android:onClick="onClick"
            android:layout_height="match_parent"
            android:background="@drawable/time_ico"/>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingBottom="50dp"
        android:paddingTop="50dp"
        android:paddingRight="80dp"
        android:paddingEnd="80dp"
        android:paddingLeft="80dp"
        android:paddingStart="80dp"
        android:layout_weight="3"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/email_re"
            android:onClick="onClick"
            android:background="@drawable/email_ico"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

        </RelativeLayout>

        <ImageView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:id="@+id/sms_re"
            android:onClick="onClick"
            android:background="@drawable/sms_ico"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

    </LinearLayout>



</LinearLayout>