<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ReplyClass">

    <android.support.design.widget.AppBarLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_weight="1"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:theme="@style/AppTheme.AppBarOverlay"
        xmlns:android="http://schemas.android.com/apk/res/android">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar1"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorFAB1"
        app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <include
        layout="@layout/content_main">
    </include>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="210dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        app:elevation="6dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forward"
            android:id="@+id/tv_4"
            android:textSize="@dimen/content_main_fb_n"
            android:visibility="invisible"
            android:layout_gravity="center"/>


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB2"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/message_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        app:elevation="6dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reschedule"
            android:id="@+id/tv_3"
            android:textSize="@dimen/content_main_fb_n"
            android:visibility="invisible"
            android:layout_gravity="center"/>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB2"
            app:elevation="6dp"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/message_icon" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="90dp"
        android:layout_gravity="bottom|end"
        android:layout_marginRight="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        app:elevation="6dp"
        android:orientation="horizontal"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reply"
            android:textSize="@dimen/content_main_fb_n"
            android:id="@+id/tv_2"
            android:visibility="invisible"
            android:layout_gravity="center"
            />


        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:layout_marginRight="@dimen/fab_margin"
            android:layout_marginLeft="@dimen/fab_margin"
            android:visibility="invisible"
            app:backgroundTint="@color/colorFAB1"
            app:pressedTranslationZ="12dp"
            android:src="@drawable/transfer" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        app:elevation="10dp"
        android:layout_margin="@dimen/fab_margin"
        android:orientation="horizontal"
        >

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/message"-->
            <!--android:textSize="@dimen/content_main_fb_n"-->
            <!--android:layout_gravity="center"-->
            <!--/>-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:elevation="6dp"
            app:backgroundTint="@color/colorFAB1"
            app:pressedTranslationZ="12dp"
            android:layout_margin="@dimen/fab_margin"
            android:src="@drawable/menuss_icon" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>